--- a/doc/manpage/srcml.cfg
+++ b/doc/manpage/srcml.cfg
@@ -147,26 +147,25 @@ is preserved.
 `--${CPP_FLAG_LONG}`
 : Turns on parsing and markup of preprocessor statements in non-C/C++
 languages such as Java. Can also be enabled by defining a prefix for
-this cpp namespace URL, for example,
-`--${XMLNS_FLAG}:${SRCML_CPP_NS_PREFIX_DEFAULT}="${SRCML_CPP_NS_URI}"`.
+this cpp namespace URL, e.g., `--${XMLNS_FLAG}:${SRCML_CPP_NS_PREFIX_DEFAULT}="${SRCML_CPP_NS_URI}"`.
+
+`--${CPP_MARKUP_IF0_FLAG_LONG}`
+: Place markup in \#if 0 regions. The default is to keep just the source-code
+text in these regions, without any markup. This option indicates that the \#if 0 regions 
+should be treated as source code, and marked up accordingly.
 
 `--${CPP_NO_MARKUP_ELSE_FLAG_LONG}`
 : Only place text in \#else and \#elif regions, leaving out markup.
 The default is to markup these regions.
-
-`--${CPP_MARKUP_IF0_FLAG_LONG}`
-: Place markup in \#if 0 regions. The default is to only place text
-in these regions, leaving out markup.
 
 ## XML FORMAT
 
 The following options control the format of the XML.
 
 `-${XML_ENCODING_FLAG_SHORT}`, `--${XML_ENCODING_FLAG_LONG}=<encoding>`
-: Sets the xml encoding of the output srcML file to encoding. The
+: Uses the encoding in the output srcML file. The
 default is UTF-8. Possible encodings can be obtained by using the
-command `iconv -l` on UNIX platforms. The attribute is stored only
-on the root element.
+command `iconv -l` on UNIX platforms. The encoding is stored on the xml declaration.
 
 `--${NO_XML_DECL_LONG}`
 : No output of the default XML declaration. Useful when the output is
@@ -195,34 +194,12 @@ predefined prefix. The predefined URIs and prefixes are:
 
 This set of options allows view and control over various metadata in srcML.
 
-`-${FILENAME_FLAG_SHORT}`, `--${FILENAME_FLAG_LONG}=<filename>`
-: The value of the filename attribute is typically obtained from the input
-filename. This option allows you to specify a different filename for
-standard input or where the filename is not contained in the input path.
-
-`--${URL_FLAG_LONG}=<url>`
-: The url attribute on the root element can be defined. This is purely
-descriptive and has no interpretation by `srcml`. It is useful for specifying
-a directory or defining the source protocol.
-
-`-${SRCVERSION_FLAG_SHORT}`, `--${SRCVERSION_FLAG_LONG}=<version>`
-: Sets the value of the attribute version to version. This is a
-purely-descriptive attribute, where the value has no interpretation by
-`srcml`. The attribute is applied to the root element, and in the case
-of a srcML archive, it is also applied to each unit in the archive.
-
-`--${HASH_FLAG_LONG}`
-: The value of the hash attribute is a SHA-1 hash generated based on
-the contents of the source-code file. This is enabled by default when
-working with srcML archives.
-
-`--${TIMESTAMP_FLAG_LONG}`
-: Sets the timestamp of the output srcML file to the last modified
-time of the input source-code archive. This is the
-last modified time based on the archive files.
-
 The following options allow viewing various metadata stored in the
 srcML document.
+
+`-${LIST_FLAG_SHORT}`, `--${LIST_FLAG_LONG}`
+: List all the files in the srcML archive, then exit.
+archive, then exit.
 
 `-${INFO_FLAG_SHORT}`, `--${INFO_FLAG_LONG}`
 : Display most metadata, except the unit count (file count) in a srcML
@@ -259,6 +236,33 @@ then exit.
 `--${SHOW_UNIT_COUNT_FLAG_LONG}`
 : Display the unit count and exit.
 
+The following options allow the user to control the attributes:
+
+`-${FILENAME_FLAG_SHORT}`, `--${FILENAME_FLAG_LONG}=<filename>`
+: The value of the filename attribute is typically obtained from the input
+filename. This option allows you to specify a different filename for
+standard input or where the filename is not contained in the input path.
+
+`--${URL_FLAG_LONG}=<url>`
+: The url attribute on the root element can be defined. This is purely
+descriptive and has no interpretation by `srcml`. It is useful for specifying
+a directory or defining the source protocol.
+
+`-${SRCVERSION_FLAG_SHORT}`, `--${SRCVERSION_FLAG_LONG}=<version>`
+: Sets the value of the attribute version to version. This is a
+purely-descriptive attribute, where the value has no interpretation by
+`srcml`. The attribute is applied to the root element, and in the case
+of a srcML archive, it is also applied to each unit in the archive.
+
+`--${HASH_FLAG_LONG}`
+: The value of the hash attribute is a SHA-1 hash generated based on
+the contents of the source-code file. This is enabled by default when
+working with srcML archives.
+
+`--${TIMESTAMP_FLAG_LONG}`
+: Sets the timestamp of the output srcML file to the last modified
+time of the input source-code archive. This is the
+last modified time based on the archive files.
 
 ### EXAMPLES
 
