--- a/doc/manpage/srcml.cfg
+++ b/doc/manpage/srcml.cfg
@@ -46,12 +46,11 @@ option, a directory, or source-code archive (e.g. tar.gz).
 `-${QUIET_FLAG_SHORT}`, `--${QUIET_FLAG_LONG}`
 : Supresses status messages.
 
-`-${OUTPUT_FLAG_SHORT}`, `--${OUTPUT_FLAG_LONG}=<output-file>`
-: Write to output srcML file, URI, or source-code file.
-By default, it writes to standard output.
+`-${OUTPUT_FLAG_SHORT}` <file>, `--${OUTPUT_FLAG_LONG}`=<file>
+: Write the output to <file>. By default, it writes to standard output.
 
-`-${JOBS_FLAG_SHORT}`, `--${JOBS_FLAG_LONG}=<num>`
-: Allow up to NUM threads for source parsing. Default is 4.
+`-${JOBS_FLAG_SHORT}` <num>, `--${JOBS_FLAG_LONG}`=<num>
+: Allow up to <num> threads for source parsing. Default is 4.
 
 ## CREATING SRCML
 
@@ -61,13 +60,13 @@ If the input is source-code files, then the output is expected to be
 in srcML format. If the input is in srcML format, then the output is
 in source-code format.
 
-`-${TEXT_FLAG_SHORT}`, `--${TEXT_FLAG_LONG}=<text>`
+`-${TEXT_FLAG_SHORT}` <text>, `--${TEXT_FLAG_LONG}`=<text>
 : Processes the raw <text> string as input, respecting the escaped newline
-charater. Useful for short text inputs. Equivalent to `echo <text> | srcml`
-with the relevant language specification.
+charater. Useful for short text inputs. Common escape sequences in C and echo are
+expanded, including \n, \t, \a, \b, \v, \e \xHH where H is 1 to 2 hex values, and \NNN and \0NNN where N is 1 to 3 octal digits.
 
-`--${FILES_FROM_LONG}=<file>`
-: Treats the input file as a list of source files.
+`--${FILES_FROM_LONG}`=<file>
+: Treats the input <file> as a list of source files.
 Each file is separately translated and collectively stored into a
 single srcML archive. The list has a single filename on each line
 starting at the beginning of the line. Blank lines and lines that
@@ -75,7 +74,7 @@ begin with the character '\#' are ignored. As with input and output
 files, using the character '-' in place of a file name takes the input
 list from standard input.
 
-`-${LANGUAGE_FLAG_SHORT}`, `--${LANGUAGE_FLAG_LONG}=<language>`
+`-${LANGUAGE_FLAG_SHORT}` <language>, `--${LANGUAGE_FLAG_LONG}`=<language>
 : The programming language of the source-code file. Allowable values are
 C, C++, C\#, or Java. The language affects parsing, the allowed
 markup, and what is considered a keyword. The value is also stored
@@ -88,15 +87,15 @@ program will skip that file. This allows you to run `srcml` on a
 project directory with many source-code files and config files, and
 only the files with supported extensions will be parsed by `srcml`.
 
-`--${REGISTER_EXTENSION_FLAG_LONG}="<extension>=<language>"`
+`--${REGISTER_EXTENSION_FLAG_LONG}` <extension>=<language>
 : Sets the <extension> to associate with a given <language>. Note
-that the extensions do not contain the period character '.'.
+that the extensions do not contain the period character '.', e.g., `--register-ext "h=C++"`
 
 	A common use of this is C++ files that use the .h extension for header
 files. By default these will be translated as C source-code files. This
 option can be used to override this behavior.
 
-`--${SRC_ENCODING_FLAG_LONG}=<encoding>`
+`--${SRC_ENCODING_FLAG_LONG}`=<encoding>
 : Sets the input encoding of the source-code file to <encoding>. The
 default is to try to automatically determine this when possible.
 Used for any necessary source-code text translation to the encoding used
@@ -108,6 +107,9 @@ or "ISO-8859-1" can be obtained by using the command
 : Creates a srcML archive, which can contain multiple files in the srcML
 format. Default when provided more than one file or a directory as
 input.
+
+The following options control how and when the output format is srcML. In most cases,
+the output will be in the proper format, but these allow you to specify.
 
 `-${OUTPUT_XML_FLAG_SHORT}`,`--${OUTPUT_XML_FLAG_LONG}`
 : Output srcML as complete and valid XML. 
@@ -121,6 +123,15 @@ the namespaces declared on the archive root element, so is technically not valid
 `-${OUTPUT_XML_RAW_FLAG_SHORT}`,`--${OUTPUT_XML_RAW_FLAG_LONG}`
 : Output the XML inside of the srcML unit element. This is not valid XML as it contains no
 namespace declarations and does not necessarily have a single root element.
+
+### Examples
+
+srcml --text="a;" -l C++ --output-xml-fragment
+: `<unit revision="1.0.0" language="C++"><expr_stmt><expr><name>a</name></expr>;</expr_stmt></unit>
+`
+
+srcml --text="a;" -l C++ --output-xml-raw
+: `<expr_stmt><expr><name>a</name></expr>;</expr_stmt>`
 
 ## MARKUP OPTIONS
 
