--- a/doc/manpage/srcml.cfg
+++ b/doc/manpage/srcml.cfg
@@ -96,12 +96,10 @@ files. By default these will be translated as C source-code files. This
 option can be used to override this behavior.
 
 `--${SRC_ENCODING_FLAG_LONG}`=<encoding>
-: Sets the input encoding of the source-code file to <encoding>. The
-default is to try to automatically determine this when possible.
-Used for any necessary source-code text translation to the encoding used
-in the srcML file. Possible encodings, such as "UTF-16", "ISO-10646-UCS-2",
-or "ISO-8859-1" can be obtained by using the command
-`iconv -l` on UNIX platforms.
+: Uses the <encoding> when processing the input source-code file. The
+default is to try to automatically determine this when possible, i.e., ISO-8859-1 is assumed
+unless a non-character is detected. Possible encodings include "UTF-16", "ISO-10646-UCS-2",
+or "ISO-8859-1". On UNIX platforms, a full list of encodings can be obtained by using the command `iconv -l`.
 
 `-${ARCHIVE_FLAG_SHORT}`, `--${ARCHIVE_FLAG_LONG}`
 : Creates a srcML archive, which can contain multiple files in the srcML
@@ -146,7 +144,7 @@ ${TABS_FLAG}.
 "${SRCML_EXT_POSITION_NS_PREFIX_DEFAULT}" in the namespace
 "${SRCML_EXT_POSITION_NS_URI}", e.g., `<class pos:start="15,1" pos:end="25,2">`
 
-`--${TABS_FLAG}=<tabsize>`
+`--${TABS_FLAG}`=<tabsize>
 : Set the tab size. Default is 8. Use of this option automatically
 turns on the position attributes.
 
@@ -173,8 +171,8 @@ The default is to markup these regions.
 
 The following options control the format of the XML.
 
-`-${XML_ENCODING_FLAG_SHORT}`, `--${XML_ENCODING_FLAG_LONG}=<encoding>`
-: Uses the encoding in the output srcML file. The
+`-${XML_ENCODING_FLAG_SHORT}` <encoding>, `--${XML_ENCODING_FLAG_LONG}`=<encoding>
+: Uses the encoding for the output srcML file. The
 default is UTF-8. Possible encodings can be obtained by using the
 command `iconv -l` on UNIX platforms. The encoding is stored on the xml declaration.
 
@@ -188,12 +186,12 @@ indicated in the srcML document by the declaration of the specific
 extension namespace. These flags make it easier to declare, and are
 an alternative way to turn on options by declaring the URI for an option.
 
-`--${XMLNS_FLAG}=<uri>`
+`--${XMLNS_FLAG}`=<uri>
 : Sets the <uri> for the default namespace. The predefined URI is:
 
 	`--${XMLNS_FLAG}=${SRCML_SRC_NS_URI}`
 
-`--${XMLNS_FLAG}:<prefix>=<uri>`
+`--${XMLNS_FLAG}:`<prefix>=<uri>
 : Sets the namespace prefix PREFIX for the namespace URI.
 There is a set of standard URIs for the elements in srcML, each with a
 predefined prefix. The predefined URIs and prefixes are:
@@ -220,8 +218,8 @@ archive, then exit.
 : Display most metadata including the unit (file) count in a srcML archive,
 then exit.
 
-`--${PREFIX_FLAG_LONG}=<uri>`
-: Display a prefix given by a <URI> and exit. See [XML FORM][].
+`--${PREFIX_FLAG_LONG}`=<uri>
+: Display a prefix given by a <uri> and exit. See [XML FORM][].
 
 `--${SHOW_FILENAME_FLAG_LONG}`
 : Display the filename and exit.
@@ -249,17 +247,17 @@ then exit.
 
 The following options allow the user to control the attributes:
 
-`-${FILENAME_FLAG_SHORT}`, `--${FILENAME_FLAG_LONG}=<filename>`
+`-${FILENAME_FLAG_SHORT}` <filename>, `--${FILENAME_FLAG_LONG}`=<filename>
 : The value of the filename attribute is typically obtained from the input
 filename. This option allows you to specify a different filename for
 standard input or where the filename is not contained in the input path.
 
-`--${URL_FLAG_LONG}=<url>`
+`--${URL_FLAG_LONG}`=<url>
 : The url attribute on the root element can be defined. This is purely
 descriptive and has no interpretation by `srcml`. It is useful for specifying
 a directory or defining the source protocol.
 
-`-${SRCVERSION_FLAG_SHORT}`, `--${SRCVERSION_FLAG_LONG}=<version>`
+`-${SRCVERSION_FLAG_SHORT}` <version>, `--${SRCVERSION_FLAG_LONG}`=<version>
 : Sets the value of the attribute version to version. This is a
 purely-descriptive attribute, where the value has no interpretation by
 `srcml`. The attribute is applied to the root element, and in the case
@@ -282,7 +280,11 @@ srcml input.cpp
 and output to standard out.
 
 echo "int a;" | srcml -${LANGUAGE_FLAG_SHORT} C++
-: Create a srcML unit from standard in, using C++ parsing rules,
+: Create a srcML unit from standard input, using C++ parsing rules,
+and output to standard out.
+
+srcml --text="int a;\n" -${LANGUAGE_FLAG_SHORT} C++
+: Create a srcML unit from the expanded text, using C++ parsing rules,
 and output to standard out.
 
 srcml dir.xml --${SHOW_UNIT_COUNT_FLAG_LONG}
@@ -299,18 +301,17 @@ rules as well as C++ parsing rules for preprocessor directives.
 The following describe options that are only applicable for when
 the output is in source-code format.
 
-`-${UNIT_OPTION_SHORT}`, `--${UNIT_OPTION_LONG} <n>`
+`-${UNIT_OPTION_SHORT}` <n>, `--${UNIT_OPTION_LONG}` <n>
 : Extract individual <n>th unit from srcML archive.
 
-`-${OUTPUT_FLAG_SHORT}`, `--${OUTPUT_FLAG_LONG}=<output-file>`
-: Write to output srcML file, URI, or source-code file.
-By default, it writes to standard output.
+`-${OUTPUT_FLAG_SHORT}` <file>, `--${OUTPUT_FLAG_LONG}`=<file>
+: Write the srcML or source code to the <file>. By default, it writes to standard output.
 
 `-${OUTPUT_SRC_FLAG_SHORT}`, `--${OUTPUT_SRC_FLAG_LONG}`
 : Output source code. This is the default when the input
 is in srcML.
 
-`--${TO_DIR_FLAG_LONG}=<directory>`
+`--${TO_DIR_FLAG_LONG}`=<directory>
 : Extract all files from srcML and create them in the file system at
 <directory>.
 
@@ -333,28 +334,29 @@ directory as the root directory.
 In Xpath expressions, the default namespace cannot be used, so element names must have a prefix, e.g., `src`, `cpp`, etc. By default, the result is a srcML archive where each unit is a query result, marked with the original filename.
 
 As an alternative, the original srcML can be preserved with the query results marked with an attribute, wrapped with an element, or both. Note that the prefix and uri used for the namespace
-must be declared with the `--xmlns` option.
+must be declared with the option `--${XMLNS_FLAG}:`.
 
-`--${ATTRIBUTE_LONG} <prefix>:<name>=<value>`
-: Adds the attribute <prefix>:<name>="<value>" to every Xpath expression result.
+`--${ATTRIBUTE_LONG}` _prefix:name=value_
+: Adds the attribute _prefix:name="value"_ to every Xpath expression result.
 
-`--${ELEMENT_LONG}=<prefix>:<name>`
-: Wraps every Xpath expression result with an element of the form <prefix>:<name>
+`--${ELEMENT_LONG}` _prefix:name_
+: Wraps every Xpath expression result with an element of the form _prefix:name_. May be mixed with `--${ATTRIBUTE_LONG}`.
 
-`--${XSLT_LONG}=<file|uri>`
+`--${XSLT_LONG}\=<file|uri>
 : Apply a transformation from an XSLT <file> or <uri> to each individual unit.
 
-`--${XSLT_PARAM} <name>="<value>"`
+`--${XSLT_PARAM}` <name>="<value>"
 : Passes the string parameter <name> with UTF-8 encoded string <value> to the XSLT program
 
-`--${RELAXNG_OPTION_LONG}=<file|uri>`
+`--${RELAXNG_OPTION_LONG}`=<file|uri>
 : Output individual units that match the RELAXNG <file> or <uri>.
 
 
 ### EXAMPLES
 
-srcml a.cpp --${XPATH_OPTION_LONG}="//src:name" --${ATTRIBUTE_LONG}="cpp:foo=test"
-: Convert a.cpp to srcML and add the attribute cpp:foo=test to all src:name
+srcml a.cpp --${XPATH_OPTION_LONG}="//src:name" --${ATTRIBUTE_LONG}="q:foo=test" --${XMLNS_FLAG}:q=mysite.net
+
+: Convert a.cpp to srcML and add the attribute `q:foo=test` to all `src:name`
 elements as found by the XPath query. Output the results to standard out.
 
 srcml archive.xml --xpath "//src:unit/@filename"
@@ -378,8 +380,6 @@ to incorrect markup.
 
 Line endings are normalized in XML formats including srcML.
 
-
-
 ## BUGS
 
 Libxml2 directly supports many encodings beyond UTF-8, UTF-16, and
@@ -389,11 +389,6 @@ and by other libxml2-based tools (e.g., xmllint). Use the LE or BE
 version of the encoding, e.g., UTF-32BE, UTF-32LE, instead.
 
 Report bugs at Contact us at http://www.srcml.org/support.html
-
-## SEE ALSO
-
-`srcml`(1)
-
 
 ## AUTHORS
 
