Move and fix some options in the manpage

--- a/doc/manpage/srcml.cfg
+++ b/doc/manpage/srcml.cfg
@@ -171,7 +171,7 @@ The default is to markup these regions.
 
 The following options control the format of the XML.
 
-`-${XML_ENCODING_FLAG_SHORT}` <encoding>, `--${XML_ENCODING_FLAG_LONG}`=<encoding>
+`--${XML_ENCODING_FLAG_LONG}`=<encoding>
 : Uses the encoding for the output srcML file. The
 default is UTF-8. Possible encodings can be obtained by using the
 command `iconv -l` on UNIX platforms. The encoding is stored on the xml declaration.
@@ -218,17 +218,14 @@ archive, then exit.
 : Display most metadata including the unit (file) count in a srcML archive,
 then exit.
 
-`--${PREFIX_FLAG_LONG}`=<uri>
-: Display a prefix given by a <uri> and exit. See [XML FORM][].
-
-`--${SHOW_FILENAME_FLAG_LONG}`
-: Display the filename and exit.
-
 `--${SHOW_LANGUAGE_FLAG_LONG}`
 : Display language and exit.
 
 `--${SHOW_URL_FLAG_LONG}`
 : Display URL of the root element and exit.
+
+`--${SHOW_FILENAME_FLAG_LONG}`
+: Display the filename and exit.
 
 `--${SHOW_SRC_VERSION_FLAG_LONG}`
 : Display the source-code version attribute and exit.
@@ -244,6 +241,9 @@ then exit.
 
 `--${SHOW_UNIT_COUNT_FLAG_LONG}`
 : Display the unit count and exit.
+
+`--${PREFIX_FLAG_LONG}`=<uri>
+: Display a prefix given by a <uri> and exit.
 
 The following options allow the user to control the attributes:
 
@@ -303,9 +303,6 @@ the output is in source-code format.
 
 `-${UNIT_OPTION_SHORT}` <n>, `--${UNIT_OPTION_LONG}` <n>
 : Extract individual <n>th unit from srcML archive.
-
-`-${OUTPUT_FLAG_SHORT}` <file>, `--${OUTPUT_FLAG_LONG}`=<file>
-: Write the srcML or source code to the <file>. By default, it writes to standard output.
 
 `-${OUTPUT_SRC_FLAG_SHORT}`, `--${OUTPUT_SRC_FLAG_LONG}`
 : Output source code. This is the default when the input
