Small wording change, change display of xml results in example

--- a/doc/manpage/srcml.cfg
+++ b/doc/manpage/srcml.cfg
@@ -61,7 +61,7 @@ in srcML format. If the input is in srcML format, then the output is
 in source-code format.
 
 `-${TEXT_FLAG_SHORT}` <text>, `--${TEXT_FLAG_LONG}`=<text>
-: Processes the raw <text> string as input, respecting the escaped newline
+: Processes the <text> string as source code, respecting the escaped newline
 charater. Useful for short text inputs. Common escape sequences in C and echo are
 expanded, including \n, \t, \a, \b, \v, \e \xHH where H is 1 to 2 hex values, and \NNN and \0NNN where N is 1 to 3 octal digits.
 
@@ -125,11 +125,12 @@ namespace declarations and does not necessarily have a single root element.
 ### Examples
 
 srcml --text="a;" -l C++ --output-xml-fragment
-: `<unit revision="1.0.0" language="C++"><expr_stmt><expr><name>a</name></expr>;</expr_stmt></unit>
-`
+
+```<unit revision="1.0.0" language="C++"><expr_stmt><expr><name>a</name></expr>;</expr_stmt></unit>```
 
 srcml --text="a;" -l C++ --output-xml-raw
-: `<expr_stmt><expr><name>a</name></expr>;</expr_stmt>`
+
+```<expr_stmt><expr><name>a</name></expr>;</expr_stmt>```
 
 ## MARKUP OPTIONS
 
