Inline Cmake macro copyDependentFile

--- a/test/client/testsuite/CMakeLists.txt
+++ b/test/client/testsuite/CMakeLists.txt
@@ -24,19 +24,18 @@ list(REMOVE_ITEM CLI_TESTS framework_test.sh)
 # @TODO Not sure this is needed. Tests work without copying
 if(NOT ${CMAKE_SOURCE_DIR} MATCHES ${CMAKE_BINARY_DIR})
 
-    copyDependentFile(framework_test.sh)
+	file(COPY framework_test.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
 endif()
 
 foreach(CLI_TEST ${CLI_TESTS})
     get_filename_component(TEST_NAME ${CLI_TEST} NAME)
     add_test(NAME ${TEST_NAME} COMMAND ${CLI_TEST})
-
-    # @TODO Not sure this is needed. Tests work without copying
-    if(NOT ${CMAKE_SOURCE_DIR} MATCHES ${CMAKE_BINARY_DIR})
-
-        copyDependentFile(${CLI_TEST})
-
-    endif()
-
 endforeach()
+
+# @TODO Not sure this is needed. Tests work without copying
+if(NOT ${CMAKE_SOURCE_DIR} MATCHES ${CMAKE_BINARY_DIR})
+
+	file(COPY ${CLI_TESTS} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+endif()
