--- a/test/parser/testsuite/CMakeLists.txt
+++ b/test/parser/testsuite/CMakeLists.txt
@@ -21,9 +21,7 @@ file(GLOB PARSER_TESTS *.xml)
 
 if(NOT ${CMAKE_SOURCE_DIR} MATCHES ${CMAKE_BINARY_DIR})
 
-	file(COPY Makefile.gen suite.txt DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-
-    file(COPY ${PARSER_TESTS} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+	file(COPY Makefile.gen suite.txt ${PARSER_TESTS} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
 	file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/xsl)
 
