--- a/test/client/testsuite/CMakeLists.txt
+++ b/test/client/testsuite/CMakeLists.txt
@@ -21,13 +21,13 @@
 file(GLOB CLI_TESTS *.sh)
 list(REMOVE_ITEM CLI_TESTS framework_test.sh)
 
-# @TODO Not sure this is needed. Tests work without copying
-file(COPY framework_test.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+# @BUILD This is not needed
+#file(COPY framework_test.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
 foreach(CLI_TEST ${CLI_TESTS})
     get_filename_component(TEST_NAME ${CLI_TEST} NAME)
     add_test(NAME ${TEST_NAME} COMMAND ${CLI_TEST})
 endforeach()
 
-# @TODO Not sure this is needed. Tests work without copying
-file(COPY ${CLI_TESTS} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+# @BUILD This is not needed. Tests are pulled from the src directory when ctest is run
+#file(COPY ${CLI_TESTS} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
