--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -51,8 +51,8 @@ set_target_properties(srcml_shared PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_B
 
 # Set libsrcml version
 file(STRINGS "${CMAKE_SOURCE_DIR}/src/libsrcml/srcml.h" SRCML_HEADER)
-string(REGEX MATCH "SRCML_VERSION_STRING \"[0-9].[0-9].[0-9]\"" SRCML_VERSION_STRING "${SRCML_HEADER}")
-string(REGEX MATCH "([0-9].[0-9].[0-9])" SRCML_VERSION "${SRCML_VERSION_STRING}")
+string(REGEX MATCH "SRCML_VERSION_STRING \"([0-9].[0-9].[0-9])\"" _ "${SRCML_HEADER}")
+set(SRCML_VERSION ${CMAKE_MATCH_1})
 
 set_target_properties(srcml_shared PROPERTIES VERSION "${SRCML_VERSION}" SOVERSION "${SRCML_VERSION}")
 
