Simplify source detection for building client

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -17,11 +17,9 @@
 # along with the srcML Toolkit; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
-file(GLOB SRCML_HEADERS *.hpp)
-file(GLOB SRCML_SOURCE *.cpp)
-list(REMOVE_ITEM SRCML_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/srcml.cpp)
+file(GLOB CLIENT_SOURCE *.hpp *.cpp)
 
-srcMLExec(srcml "srcml.cpp;${SRCML_HEADERS};${SRCML_SOURCE}" srcml_shared ${SRCML_LIBRARIES})
+srcMLExec(srcml "${CLIENT_SOURCE}" srcml_shared ${SRCML_LIBRARIES})
 
 if(APPLE)							     
     install(CODE "execute_process(COMMAND \"/usr/bin/strip\" \"-u\" \"-r\" \"${CMAKE_BINARY_DIR}/bin/srcml\")")
