Move -DNO_DLLOAD into src/CMakeLists.txt out of config.cmake

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,6 +17,10 @@
 # along with the srcML Toolkit; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
+if(NOT DYNAMIC_LOAD_ENABLED)
+    add_definitions(-DNO_DLLOAD)
+endif()
+
 if(${CMAKE_COMPILER_IS_GNUCXX})
 
     set(USE_FPIC -fPIC)
