Move Python detection into test/parser/CMakeLists.txt out of config.cmake

--- a/test/parser/CMakeLists.txt
+++ b/test/parser/CMakeLists.txt
@@ -17,6 +17,18 @@
 # along with the srcML Toolkit; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
+find_package(PythonInterp REQUIRED)
+
+# Enforcing that the version of python being used must have a major version of 2.
+# and the minor version be greater than version 6 (this means version 2.7 of python 
+# version 2 or newer).
+#if(NOT ${PYTHON_VERSION_MAJOR} EQUAL "2")
+#    message(FATAL_ERROR "Version of python found is not 2.X.X")
+#    if(${PYTHON_VERSION_MINOR} LESS EQUAL 6)
+#        message(FATAL_ERROR "Version of python found is not 2.6.X")
+#    endif()
+#endif()
+
 file(COPY runtest.py python_test_bindings.py DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
 add_subdirectory(testsuite)
