--- a/test/libsrcml/CMakeLists.txt
+++ b/test/libsrcml/CMakeLists.txt
@@ -21,7 +21,7 @@ include_directories(.)
 
 include_directories(/usr/local/include)
 
-set(CMAKE_CXX_FLAGS "--std=c++11")
+set(CMAKE_CXX_STANDARD 11)
 
 add_definitions(-DWITH_LIBXSLT)
 
