Inline install.cmake

--- a/src/libsrcml/CMakeLists.txt
+++ b/src/libsrcml/CMakeLists.txt
@@ -23,3 +23,15 @@ add_library(libsrcml OBJECT ${LIBSRCML_SOURCE})
 add_dependencies(libsrcml parser)
 
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/srcml.h DESTINATION include)
+
+if(OS_NAME STREQUAL "Fedora")
+    set(CMAKE_INSTALL_PREFIX "/usr")
+elseif(EXISTS "/etc/redhat-release")
+    set(CMAKE_INSTALL_PREFIX "/usr")
+elseif(NOT WIN32)
+    set(CMAKE_INSTALL_PREFIX "/usr/local")
+elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+    file(GLOB SRCML_DLLS ${WINDOWS_DEP_PATH}/${BUILD_ARCH}/release/bin/*.dll)
+    install(FILES ${SRCML_DLLS} DESTINATION bin)
+endif()
+
